# dynamically-allocated-mlp

./: .gitignore  CMakeLists.txt  DenseLayer.cpp  DenseLayer.h  InitializationFunctions.cpp  InitializationFunctions.h  MemoryFunctions.cpp  MemoryFunctions.h  MenuFunctions.cpp  MenuFunctions.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h  OutputLayer.cpp  OutputLayer.h  OutputNeuron.cpp  OutputNeuron.h  README.md  StatisticsFunctions.cpp  StatisticsFunctions.h  dataset.csv  main.cpp  means_and_vars.csv  neural network.vcxproj  neural network.vcxproj.filters  scales_and_shifts.csv  weights_and_biases.csv
Debug/: neural network.exe.recipe  neural network.ilk  vc143.idb
Debug/neural network.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  neural network.lastbuildstate
include/: Constants.h  DenseLayer.h  InitializationFunctions.h  MemoryFunctions.h  MenuFunctions.h  NeuralNetwork.h  OutputLayer.h  StatisticsFunctions.h  TrainingLogAndList.h
nn_saved_state/: means_and_vars.csv  scales_and_shifts.csv  weights_and_biases.csv
src/: BestStateLoader.cpp  DenseLayer.cpp  InitializationFunctions.cpp  MemoryFunctions.cpp  MenuFunctions.cpp  NNInitAndValidation.cpp  NeuralNetwork.cpp  OutputLayer.cpp  SavedStateLoader.cpp  StatisticsFunctions.cpp  TrainingLogAndList.cpp
training_logs/: 15th k log.txt  all samples 1.txt  eighth k log.txt  eleventh k log.txt  epic.txt  fifth k log.txt  first k log.txt  fourteenth training log.txt  fourth k log.txt  ninth k log.txt  second k log.txt  seventh k log.txt  sixth k log.txt  tenth training log.txt  third k log.txt  thirteenth k log.txt  twelfth k log.txt
x64/Debug/: denselayer.obj.enc  main.obj.enc  neural network.ilk  neuralnetwork.obj.enc  neuron.obj.enc  outputlayer.obj.enc  outputneuron.obj.enc  vc143.idb
x64/Debug/neural network.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
